feat: rebrand to Bready with auth, multi-tenancy, profiles, recipe ingredients & currency
Expande la app (antes "Bakery Cost Calculator") a "Bready":

- Autenticación JWT stateless: registro, login, logout. /api/auth/** público,
  resto protegido (401 sin token). Spring Security + jjwt, BCrypt.
- Multi-tenancy: cada usuario es dueño de sus datos. Migración V2 agrega
  tabla users + user_id a inputs/recipes/products/fixed_costs/employees/
  cost_settings (unique por usuario); cost_settings deja de ser singleton.
  Scoping confinado a los RepositoryImpl vía CurrentUserProvider.
- Perfil: ver/editar nombre y foto (guardada en la BD como bytea), servida
  por endpoint. Menú de usuario + cerrar sesión en el shell.
- Recetas: alta con ingredientes (FormArray) + quitar ingrediente
  (endpoint DELETE y botón en el detalle).
- Moneda: pipe `money` ($ es-AR) en todos los importes + prefijo $ en inputs.
- Rebranding: wordmark BREADY + mascota + tagline, título de pestaña, assets.
- Docs: BREADY_EXPANSION.md + nota en PROGRESS.md.

Incluye la migración de build a Spring Boot 2.7.15 / Java 11 (javax.*) que
estaba pendiente en el working tree. Backend: 155 tests en verde. Frontend:
build de producción OK. Verificado e2e en navegador.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>