@@ -1,7 +1,9 @@
 package com.bakery.infrastructure.persistence.repository;
 
+import com.bakery.application.port.CurrentUserProvider;
 import com.bakery.application.port.IEmployeeRepository;
 import com.bakery.domain.model.Employee;
+import com.bakery.infrastructure.persistence.entity.EmployeeEntity;
 import com.bakery.infrastructure.persistence.jpa.EmployeeJpaRepository;
 import com.bakery.infrastructure.persistence.mapper.EmployeeEntityMapper;
 import org.springframework.stereotype.Repository;
@@ -9,9 +11,10 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
- * Adaptador de persistencia de empleados.
+ * Adaptador de persistencia de empleados (scopeado por usuario).
  */
 @Repository
 @Transactional
@@ -19,31 +22,39 @@ public class EmployeeRepositoryImpl implements IEmployeeRepository {
 
     private final EmployeeJpaRepository jpaRepository;
     private final EmployeeEntityMapper mapper;
+    private final CurrentUserProvider currentUserProvider;
 
-    public EmployeeRepositoryImpl(EmployeeJpaRepository jpaRepository, EmployeeEntityMapper mapper) {
+    public EmployeeRepositoryImpl(EmployeeJpaRepository jpaRepository, EmployeeEntityMapper mapper,
+                                  CurrentUserProvider currentUserProvider) {
         this.jpaRepository = jpaRepository;
         this.mapper = mapper;
+        this.currentUserProvider = currentUserProvider;
     }
 
     @Override
     public Employee save(Employee employee) {
-        return mapper.toDomain(jpaRepository.save(mapper.toEntity(employee)));
+        EmployeeEntity entity = mapper.toEntity(employee);
+        entity.setUserId(currentUserProvider.getCurrentUserId());
+        return mapper.toDomain(jpaRepository.save(entity));
     }
 
     @Override
     @Transactional(readOnly = true)
     public Optional<Employee> findById(Integer id) {
-        return jpaRepository.findById(id).map(mapper::toDomain);
+        return jpaRepository.findByIdAndUserId(id, currentUserProvider.getCurrentUserId())
+                .map(mapper::toDomain);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<Employee> findAll() {
-        return jpaRepository.findAll().stream().map(mapper::toDomain).toList();
+        return jpaRepository.findByUserId(currentUserProvider.getCurrentUserId())
+                .stream().map(mapper::toDomain).collect(Collectors.toList());
     }
 
     @Override
     public void deleteById(Integer id) {
-        jpaRepository.deleteById(id);
+        jpaRepository.findByIdAndUserId(id, currentUserProvider.getCurrentUserId())
+                .ifPresent(jpaRepository::delete);
     }
 }
