@@ -1,7 +1,9 @@
 package com.bakery.infrastructure.persistence.repository;
 
+import com.bakery.application.port.CurrentUserProvider;
 import com.bakery.application.port.IInputRepository;
 import com.bakery.domain.model.Input;
+import com.bakery.infrastructure.persistence.entity.InputEntity;
 import com.bakery.infrastructure.persistence.jpa.InputJpaRepository;
 import com.bakery.infrastructure.persistence.mapper.InputEntityMapper;
 import org.springframework.stereotype.Repository;
@@ -9,10 +11,10 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
- * Adaptador de persistencia de insumos: implementa el port usando
- * Spring Data + mapper entity<->dominio.
+ * Adaptador de persistencia de insumos (scopeado por usuario).
  * Transaccional para que el mapeo recorra las relaciones LAZY dentro de la sesión.
  */
 @Repository
@@ -21,31 +23,39 @@ public class InputRepositoryImpl implements IInputRepository {
 
     private final InputJpaRepository jpaRepository;
     private final InputEntityMapper mapper;
+    private final CurrentUserProvider currentUserProvider;
 
-    public InputRepositoryImpl(InputJpaRepository jpaRepository, InputEntityMapper mapper) {
+    public InputRepositoryImpl(InputJpaRepository jpaRepository, InputEntityMapper mapper,
+                               CurrentUserProvider currentUserProvider) {
         this.jpaRepository = jpaRepository;
         this.mapper = mapper;
+        this.currentUserProvider = currentUserProvider;
     }
 
     @Override
     public Input save(Input input) {
-        return mapper.toDomain(jpaRepository.save(mapper.toEntity(input)));
+        InputEntity entity = mapper.toEntity(input);
+        entity.setUserId(currentUserProvider.getCurrentUserId());
+        return mapper.toDomain(jpaRepository.save(entity));
     }
 
     @Override
     @Transactional(readOnly = true)
     public Optional<Input> findById(Integer id) {
-        return jpaRepository.findById(id).map(mapper::toDomain);
+        return jpaRepository.findByIdAndUserId(id, currentUserProvider.getCurrentUserId())
+                .map(mapper::toDomain);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<Input> findAll() {
-        return jpaRepository.findAll().stream().map(mapper::toDomain).toList();
+        return jpaRepository.findByUserId(currentUserProvider.getCurrentUserId())
+                .stream().map(mapper::toDomain).collect(Collectors.toList());
     }
 
     @Override
     public void deleteById(Integer id) {
-        jpaRepository.deleteById(id);
+        jpaRepository.findByIdAndUserId(id, currentUserProvider.getCurrentUserId())
+                .ifPresent(jpaRepository::delete);
     }
 }
