@@ -1,7 +1,9 @@
 package com.bakery.infrastructure.persistence.repository;
 
+import com.bakery.application.port.CurrentUserProvider;
 import com.bakery.application.port.IRecipeRepository;
 import com.bakery.domain.model.Recipe;
+import com.bakery.infrastructure.persistence.entity.RecipeEntity;
 import com.bakery.infrastructure.persistence.jpa.RecipeJpaRepository;
 import com.bakery.infrastructure.persistence.mapper.RecipeEntityMapper;
 import org.springframework.stereotype.Repository;
@@ -9,9 +11,11 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
- * Adaptador de persistencia de recetas (agregado con ingredientes en cascada).
+ * Adaptador de persistencia de recetas (agregado con ingredientes en cascada,
+ * scopeado por usuario).
  */
 @Repository
 @Transactional
@@ -19,31 +23,39 @@ public class RecipeRepositoryImpl implements IRecipeRepository {
 
     private final RecipeJpaRepository jpaRepository;
     private final RecipeEntityMapper mapper;
+    private final CurrentUserProvider currentUserProvider;
 
-    public RecipeRepositoryImpl(RecipeJpaRepository jpaRepository, RecipeEntityMapper mapper) {
+    public RecipeRepositoryImpl(RecipeJpaRepository jpaRepository, RecipeEntityMapper mapper,
+                                CurrentUserProvider currentUserProvider) {
         this.jpaRepository = jpaRepository;
         this.mapper = mapper;
+        this.currentUserProvider = currentUserProvider;
     }
 
     @Override
     public Recipe save(Recipe recipe) {
-        return mapper.toDomain(jpaRepository.save(mapper.toEntity(recipe)));
+        RecipeEntity entity = mapper.toEntity(recipe);
+        entity.setUserId(currentUserProvider.getCurrentUserId());
+        return mapper.toDomain(jpaRepository.save(entity));
     }
 
     @Override
     @Transactional(readOnly = true)
     public Optional<Recipe> findById(Integer id) {
-        return jpaRepository.findById(id).map(mapper::toDomain);
+        return jpaRepository.findByIdAndUserId(id, currentUserProvider.getCurrentUserId())
+                .map(mapper::toDomain);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<Recipe> findAll() {
-        return jpaRepository.findAll().stream().map(mapper::toDomain).toList();
+        return jpaRepository.findByUserId(currentUserProvider.getCurrentUserId())
+                .stream().map(mapper::toDomain).collect(Collectors.toList());
     }
 
     @Override
     public void deleteById(Integer id) {
-        jpaRepository.deleteById(id);
+        jpaRepository.findByIdAndUserId(id, currentUserProvider.getCurrentUserId())
+                .ifPresent(jpaRepository::delete);
     }
 }
